--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
-
-
-
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css"/>
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <main class="container">
-      <h1>Hello, world!</h1>
-    </main>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" id="styleSheet" href="/css/color-style-light.css">
+    <title>Переключение темы</title>
+</head>
+<body>
+
+<button id="themeButton" onclick="toggleTheme()">Переключить тему</button>
+
+<script src="/js/scripts.js"></script>
+</body>
 </html>
