--- a/index.html
+++ b/index.html
@@ -3,13 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic" rel="stylesheet">
     <link rel="stylesheet" id="styleSheet" href="/css/color-style-light.css">
-    <title>Переключение темы</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title></title>
 </head>
 <body>
 
-<button id="themeButton" onclick="toggleTheme()">Переключить тему</button>
-
+<a id="themeButton" onclick="toggleTheme()">Переключить тему</a>
+<div class="wrapper">
+    <section class="parallax">
+        <div class="parallax__body">
+            <div class="parallax__container _container">
+                <h1 class="parallax__title">Test text</h1>
+            </div>
+            <div class="parallax__images images-parallax">
+                <div class="images-parallax__item">
+                    <div class="images-parallax__bgl1"></div>
+                </div>
+                <div class="images-parallax__item">
+                    <div class="images-parallax__bgm"></div>
+                </div>
+                <div class="images-parallax__item">
+                    <div class="images-parallax__bgl2"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="content_container _container">
+            <h2 class="content__title">Остальной контент сайта</h2>
+            <div class="content__text">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis illum vel laudantium facere! Numquam iusto at veniam ratione. Vero laudantium consequuntur blanditiis iusto omnis! Ipsam facilis libero doloremque distinctio!</p>
+            </div>
+        </div>
+    </section>
 <script src="/js/scripts.js"></script>
 </body>
 </html>
