add: dotPast links

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал Dikoland V4 и создавал этот сайт. Часть администрации Dikoland. <br>
         </p>
         <div style="text-align: left;">
-          <a href="example.com"><img src="assets/links/youtube.svg" alt=""></a>
-          <a href="example.com" style="padding-right: 32px;"><img src="assets/links/discord.svg" alt=""></a>
+          <a href="https://www.youtube.com/@dotpast"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" style="padding-right: 32px;"><img src="assets/links/discord.svg" alt=""></a>
         </div>
         <a href="https://www.twitch.tv/crimrosetv" class="secret"><p style="text-align: left;">https://twitch.tv/crimrosetv</p></a>
       </article>
