add: some profile links, finish articles

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <p style="text-align: left;">Создатели и владельцы. Они оба имели свои сервера и решили объединить их.</p>
         <div style="text-align: left;">
           <img src="/assets/admins/dikyt.png" alt="" width="64">
-          <a href="example.com"><img src="assets/links/youtube.svg" alt=""></a>
-          <a href="example.com" style="padding-right: 32px;"><img src="assets/links/discord.svg" alt=""></a>
+          <a href="https://www.youtube.com/@Dikozavr228" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank" style="padding-right: 32px;"><img src="assets/links/discord.svg" alt=""></a>
 
           <img src="/assets/admins/vladvk.png" alt="" width="64">
-          <a href="example.com"><img src="assets/links/youtube.svg" alt=""></a>
-          <a href="example.com"><img src="assets/links/discord.svg" alt=""></a>
+          <a href="https://www.youtube.com/@VladVK" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
       </article>
       <article class="center article-block">
@@ -91,8 +91,8 @@
         <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал Dikoland V4 и создавал этот сайт. Часть администрации Dikoland. <br>
         </p>
         <div style="text-align: left;">
-          <a href="https://www.youtube.com/@dotpast"><img src="assets/links/youtube.svg" alt=""></a>
-          <a href="https://discord.com/users/585025499995045888" style="padding-right: 32px;"><img src="assets/links/discord.svg" alt=""></a>
+          <a href="https://www.youtube.com/@dotpast" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
         <a href="https://www.twitch.tv/crimrosetv" class="secret"><p style="text-align: left;">https://twitch.tv/crimrosetv</p></a>
       </article>
@@ -102,29 +102,54 @@
         <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Alexsus</h1>
         <p style="text-align: left;">Модератор, оценка заявок. Друг Дика. Часть администрации Dikoland.</p>
+        <div style="text-align: left;">
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
       <article class="center">
         <img src="/assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Aquell_</h1>
         <p style="text-align: left;">Расмотр заявок, организатор ивентов. Один из самых старых в администрации. Часть администрации Dikoland.</p>
+        <div style="text-align: left;">
+          <a href="https://www.youtube.com/@dotpast" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
       <article class="center">
-        <h1>Dan_Sur</h1>
-        Разработчик, организатор ивентов. Делает (почти) все по разработке. (дай поработать >:( - dotPast) Часть администрации MineReam.
+        <img src="/assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
+        <h1 style="text-align: left;">Dan_Sur</h1>
+        <p style="text-align: left;">Разработчик, организатор ивентов. Делает (почти) все по разработке. (дай поработать >:( - dotPast) Часть администрации MineReam.</p>
+        <div style="text-align: left;">
+          <a href="https://www.youtube.com/@dotpast" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
     </div>
     <div class="grid">  
       <article class="center">
-        <h1>GlebCheck</h1>
-        Модератор, организатор ивентов. хеллоу модератор. Часть администрации MineReam.
+        <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
+        <h1 style="text-align: left;">GlebCheck</h1>
+        <p style="text-align: left;">Модератор, организатор ивентов. хеллоу модератор. Часть администрации MineReam.</p>
+        <div style="text-align: left;">
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
       <article class="center">
-        <h1>HuMaNus2s</h1>
-        Разработчик, соц. менеджер. Разрабатывал сайт. Часть администрации MineReam.
+        <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
+        <h1 style="text-align: left;">HuMaNus2s</h1>
+        <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал сайт. Часть администрации MineReam.</p>
+        <div style="text-align: left;">
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
       <article class="center">
-        <h1>Rusova_669</h1>
-        Модератор, расмотр заявок. Единственая женщина в команде (если не считать людей которые в душе женщина). Часть администрации Dikoland.
+        <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
+        <h1 style="text-align: left;">Rusova_669</h1>
+        <p style="text-align: left;">Модератор, расмотр заявок. Единственая женщина в команде (если не считать людей которые в душе женщина). Часть администрации Dikoland.</p>
+        <div style="text-align: left;">
+          <a href="https://www.youtube.com/@rusovashka_6695" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
+          <a href="https://discord.com/users/585025499995045888" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
+        </div>
       </article>
     </div>
 
