--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </article>
     </div>
     <div class="grid">  
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Alexsus</h1>
         <p style="text-align: left;">Модератор, оценка заявок. Друг Дика. Часть администрации Dikoland.</p>
@@ -106,7 +106,7 @@
           <a href="https://discord.com/users/746589624251711528" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
       </article>
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Aquell_</h1>
         <p style="text-align: left;">Расмотр заявок, организатор ивентов. Один из самых старых в администрации. Часть администрации Dikoland.</p>
@@ -115,7 +115,7 @@
           <a href="https://discord.com/users/656170728005042185" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
       </article>
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/dansur.png" alt="Dan_Sur Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Dan_Sur</h1>
         <p style="text-align: left;">Разработчик, организатор ивентов. Делает (почти) все по разработке. (дай поработать >:( - dotPast) Часть администрации MineReam.</p>
@@ -126,15 +126,16 @@
       </article>
     </div>
     <div class="grid">  
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/glebcheck.png" alt="GlebCheck Skin" width="96" class="about-img">
         <h1 style="text-align: left;">GlebCheck</h1>
         <p style="text-align: left;">Модератор, организатор ивентов. хеллоу модератор. Часть администрации MineReam.</p>
         <div style="text-align: left;">
+          <a href="https://www.youtube.com/@glebcheck" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
           <a href="https://discord.com/users/801473560458559498" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
       </article>
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/humanus2s.png" alt="HuMaNus2s Skin" width="96" class="about-img">
         <h1 style="text-align: left;">HuMaNus2s</h1>
         <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал сайт. Часть администрации MineReam.</p>
@@ -142,7 +143,7 @@
           <a href="https://discord.com/users/476329789993517069" target="_blank"><img src="assets/links/discord.svg" alt=""></a>
         </div>
       </article>
-      <article class="center">
+      <article class="center article-block">
         <img src="/assets/admins/bust/rusova_669.png" alt="Alexsus Skin" width="96" class="about-img">
         <h1 style="text-align: left;">Rusova_669</h1>
         <p style="text-align: left;">Модератор, расмотр заявок. Единственая женщина в команде (если не считать людей которые в душе женщина). Часть администрации Dikoland.</p>
