cln: Cleanup unused assets

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img src="/assets/admins/bust/vladvk.png" alt="VladVK Skin" width="96" class="about-img">
           <img src="/assets/admins/bust/dikyt.png" alt="DikYT Skin" width="96" class="about-img">
 
-          <h1 style="text-align: left;">DikYT и VladVK</h1>
+          <h1 style="text-align: left;">DikYT (покинул команду) и VladVK</h1>
           <p style="text-align: left;">Создатели и владельцы. Они оба имели свои сервера и решили объединить их.</p>
           <div style="text-align: left;">
             <img src="/assets/admins/dikyt.png" alt="" width="64">
@@ -110,7 +110,7 @@
       <div class="grid">
         <article class="center article-block">
           <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
-          <h1 style="text-align: left;">Alexsus</h1>
+          <h1 style="text-align: left;">Alexsus (покинул команду)</h1>
           <p style="text-align: left;">Модератор, оценка заявок. Друг Дика. Часть администрации Dikoland.</p>
           <div style="text-align: left;">
             <a href="https://discord.com/users/746589624251711528" target="_blank"><img src="assets/links/discord.svg"
@@ -119,7 +119,7 @@
         </article>
         <article class="center article-block">
           <img src="/assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
-          <h1 style="text-align: left;">Aquell_</h1>
+          <h1 style="text-align: left;">Aquell_ (покинул команду)</h1>
           <p style="text-align: left;">Расмотр заявок, организатор ивентов. Один из самых старых в администрации. Часть
             администрации Dikoland.</p>
           <div style="text-align: left;">
