chg: Trying to fix missing assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>MineFinity Dotified</title>
 </head>
 
@@ -32,7 +32,7 @@
       </li>
     </ol>
     </p>
-    <img class="center" src="/assets/server-howtojoin-placeholder.png" alt="Как зайти">
+    <img class="center" src="./assets/server-howtojoin-placeholder.png" alt="Как зайти">
     <footer>
       <button id="copyIPServerDialog">Скопировать IP</button>
       <button id="altCloseServerDialog">Закрыть</button>
@@ -43,12 +43,12 @@
 <nav>
   <ul>
     <li>
-      <a href="/"><img src="/assets/logo.png" alt="MineFinity Logo" width="64px" class="no-img-rounding"></a>
+      <a href="/"><img src="./assets/logo.png" alt="MineFinity Logo" width="64px" class="no-img-rounding"></a>
     </li>
   </ul>
   <ul>
     <li>
-      <button class="center" onclick="toggleTheme()"><img id="themeButton" src="/assets/moon.svg"
+      <button class="center" onclick="toggleTheme()"><img id="themeButton" src="./assets/moon.svg"
           alt="Theme Switcher Button"></button>
     </li>
   </ul>
@@ -57,7 +57,7 @@
 <body>
   <main class="container">
     <div class="center background-logo">
-      <img class="logo no-img-rounding" src="/assets/logo-full.png" alt="MineFinity Logo">
+      <img class="logo no-img-rounding" src="./assets/logo-full.png" alt="MineFinity Logo">
     </div>
     <h4 class="center" style="padding-top: 1em;">ЛЕГЕНДАРНЫЙ КОЛЛАБ - эээээээммм... (кто сказал это?)</h1>
       <div class="center">
@@ -73,26 +73,26 @@
       <h1 class="center">Администрация</h1>
       <div class="grid" style="padding-top: 1em;">
         <article class="center article-block">
-          <img src="/assets/admins/bust/vladvk.png" alt="VladVK Skin" width="96" class="about-img">
-          <img src="/assets/admins/bust/dikyt.png" alt="DikYT Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/vladvk.png" alt="VladVK Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/dikyt.png" alt="DikYT Skin" width="96" class="about-img">
 
           <h1 style="text-align: left;">DikYT (покинул команду) и VladVK</h1>
           <p style="text-align: left;">Создатели и владельцы. Они оба имели свои сервера и решили объединить их.</p>
           <div style="text-align: left;">
-            <img src="/assets/admins/dikyt.png" alt="" width="64">
+            <img src="./assets/admins/dikyt.png" alt="" width="64">
             <a href="https://www.youtube.com/@Dikozavr228" target="_blank"><img src="assets/links/youtube.svg"
                 alt=""></a>
             <a href="https://discord.com/users/719146320685695067" target="_blank" style="padding-right: 32px;"><img
-                src="assets/links/discord.svg" alt=""></a>
+                src="./assets/links/discord.svg" alt=""></a>
 
-            <img src="/assets/admins/vladvk.png" alt="" width="64">
+            <img src="./assets/admins/vladvk.png" alt="" width="64">
             <a href="https://www.youtube.com/@VladVK" target="_blank"><img src="assets/links/youtube.svg" alt=""></a>
             <a href="https://discord.com/users/755318109027696650" target="_blank"><img src="assets/links/discord.svg"
                 alt=""></a>
           </div>
         </article>
         <article class="center article-block">
-          <img src="/assets/admins/bust/dotpast.png" alt="dotPast Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/dotpast.png" alt="dotPast Skin" width="96" class="about-img">
           <h1 style="text-align: left;">dotPast</h1>
           <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал Dikoland V4 и создавал этот сайт. Часть
             администрации Dikoland. <br>
@@ -109,7 +109,7 @@
       </div>
       <div class="grid">
         <article class="center article-block">
-          <img src="/assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/alexsus.png" alt="Alexsus Skin" width="96" class="about-img">
           <h1 style="text-align: left;">Alexsus (покинул команду)</h1>
           <p style="text-align: left;">Модератор, оценка заявок. Друг Дика. Часть администрации Dikoland.</p>
           <div style="text-align: left;">
@@ -118,7 +118,7 @@
           </div>
         </article>
         <article class="center article-block">
-          <img src="/assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/aquell.png" alt="Aquell_ Skin" width="96" class="about-img">
           <h1 style="text-align: left;">Aquell_ (покинул команду)</h1>
           <p style="text-align: left;">Расмотр заявок, организатор ивентов. Один из самых старых в администрации. Часть
             администрации Dikoland.</p>
@@ -129,7 +129,7 @@
           </div>
         </article>
         <article class="center article-block">
-          <img src="/assets/admins/bust/dansur.png" alt="Dan_Sur Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/dansur.png" alt="Dan_Sur Skin" width="96" class="about-img">
           <h1 style="text-align: left;">Dan_Sur</h1>
           <p style="text-align: left;">Разработчик, организатор ивентов. Делает (почти) все по разработке. (дай
             поработать >:( - dotPast) Часть администрации MineReam.</p>
@@ -142,7 +142,7 @@
       </div>
       <div class="grid">
         <article class="center article-block">
-          <img src="/assets/admins/bust/glebcheck.png" alt="GlebCheck Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/glebcheck.png" alt="GlebCheck Skin" width="96" class="about-img">
           <h1 style="text-align: left;">GlebCheck</h1>
           <p style="text-align: left;">Модератор, организатор ивентов. хеллоу модератор. Часть администрации MineReam.
           </p>
@@ -153,7 +153,7 @@
           </div>
         </article>
         <article class="center article-block">
-          <img src="/assets/admins/bust/humanus2s.png" alt="HuMaNus2s Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/humanus2s.png" alt="HuMaNus2s Skin" width="96" class="about-img">
           <h1 style="text-align: left;">HuMaNus2s</h1>
           <p style="text-align: left;">Разработчик, соц. менеджер. Разрабатывал сайт. Часть администрации MineReam.</p>
           <div style="text-align: left;">
@@ -162,7 +162,7 @@
           </div>
         </article>
         <article class="center article-block">
-          <img src="/assets/admins/bust/rusova_669.png" alt="Alexsus Skin" width="96" class="about-img">
+          <img src="./assets/admins/bust/rusova_669.png" alt="Alexsus Skin" width="96" class="about-img">
           <h1 style="text-align: left;">Rusova_669</h1>
           <p style="text-align: left;">Модератор, расмотр заявок. Единственая женщина в команде (если не считать людей
             которые в душе женщина). Часть администрации Dikoland.</p>
@@ -182,7 +182,7 @@
       </footer>
   </main>
 
-  <script src="/js/scripts.js"></script>
+  <script src="./js/scripts.js"></script>
 </body>
 
 </html>
